--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,7 @@
     --l-dark-blue: #002642;
     --l-medium-blue: #134E78;
     --l-dark-grey: #212121;
+    --l-medium-grey: #808080;
 
 
     --dark-bg: black;
@@ -65,16 +66,6 @@ a {
 
 
 /*Sidemenu styling*/
-.slide-enter-active,
-.slide-leave-active {
-  transition: transform 0.2s ease;
-}
-
-.slide-enter,
-.slide-leave-to {
-  transform: translateX(-100%);
-  transition: all 150ms ease-in 0s;
-}
 
 .sidebar-backdrop {
   background-color: rgba(0, 0, 0, 0.5);
@@ -99,9 +90,62 @@ a {
 }
 
 
-/* article component styling */
-.article-cover {
-    max-width: 12rem;
+/* global article component styling */
+.article-link{
+    text-decoration: none;
+    color: var(--l-text)
 }
 
+.article-cover {
+    max-width: 100%; height: auto;
+}
 
+/* .article-cover {
+    width: 100%;
+    min-width: 12rem;
+}
+
+.article-metadata{
+    color: var(--l-dark-blue);
+    font-weight: 600;
+  
+}
+
+.article-card{
+    max-width: 16rem;
+} */
+
+/*miscellaneous styling*/
+.margin-bottom{
+    margin-bottom: 1.6rem;
+
+}
+
+/*media queries*/
+/*  Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { 
+    .display-on-large{
+        display: none;
+    }
+}
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {  
+    .display-on-large{
+        display: none;
+    }
+}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {  
+    .display-on-large{
+        display: flex;
+    }
+}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+    .display-on-large{
+        display: flex;
+    }
+}
